--- a/index.html
+++ b/index.html
@@ -4,8 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer</title>
+    <script src="https://kit.fontawesome.com/b74eff5433.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
-    
+    <header>
+        <!-- -----------navigation-bar--------------------- -->
+        <section>
+            <nav>
+                <h2 class="nav-heading">Influencer products</h2>
+                <ul>
+                    <li class="invisible"><a href="">Home</a></li>
+                    <li class="invisible"><a href="">Products</a></li>
+                    <li class="invisible"><a href="">Sign up</a></li>
+                    <li class="invisible"><a href="">Log In</a></li>
+                    <li class="invisible"><a href="">
+                        <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
+                    </a></li>
+                    <li><a href="">
+                        <i class="fa-solid fa-store" style="color: #050505;"></i>
+                    </a></li>
+                </ul>
+            </nav>
+        </section>
+        <!-- ------------------banner----------------------- -->
+        <section>
+            <div class="container">
+                <div class="banner-tittle">
+                    <h2>Start your Journey as 
+                        Influencer</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                        <button class="banner-button">Prebook now 
+                            <i class="fa-solid fa-arrow-right" style="color: #ffffff;"></i>
+                        </button>
+                </div>
+                <div class="banner-image">
+                    <div class="circle">
+                    <img src="./images/Circle design.svg" alt=""></div>
+                    <div class="camera">
+                    <img src="./images/main-camera.png" alt=""> 
+                    </div>
+                </div>
+            </div>
+        </section>
+    </header>
 </body>
 </html>
