--- a/index.html
+++ b/index.html
@@ -48,5 +48,17 @@
             </div>
         </section>
     </header>
+    <main>
+        <div class="container1">
+            <img src="./logos/Alibaba.svg" alt="">
+            <img src="./logos/Amazon.svg" alt="">
+            <img src="./logos/Daraz.pk Logo.svg" alt="">
+            <img src="./logos/Ebay.svg" alt="">
+            <img class="shoping" src="./logos/Rakuten.svg" alt="">
+            <img class="shoping" src="./logos/Walmart.svg" alt="">
+            <img class="shoping" src="./logos/Target.svg" alt="">
+        </div>
+
+    </main>
 </body>
 </html>
