--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
         </section>
     </header>
     <main>
-        <div class="container1">
+      <section>
+         <div class="container1">
             <img src="./logos/Alibaba.svg" alt="">
             <img src="./logos/Amazon.svg" alt="">
             <img src="./logos/Daraz.pk Logo.svg" alt="">
@@ -57,8 +58,164 @@
             <img class="shoping" src="./logos/Rakuten.svg" alt="">
             <img class="shoping" src="./logos/Walmart.svg" alt="">
             <img class="shoping" src="./logos/Target.svg" alt="">
-        </div>
-
+          </div>
+       </section>
+       <section>
+        <h2 class="card-head">Popular Collection</h2>
+         <div class="container2">
+            <div class="card">
+                <img src="./images/tripod.png" alt="">
+                <h3>Flex Tripod</h3>
+                <p class="card-p">$50.48</p>
+                <i class="fa-solid fa-star star" style="color: #FB8200";></i>
+                <i class="fa-solid fa-star star" style="color: #FB8200";></i>
+                <i class="fa-solid fa-star star" style="color: #FB8200";></i>
+                <i class="fa-solid fa-star star" style="color: #FB8200";></i>
+                <i class="fa-solid fa-star-half-stroke star" style="color: #FB8200"></i>
+                <i class="rate">4.99</i>
+                <p class="describe">
+                    Wordwide shifting <br>
+                    available <br>
+                    Buyers protection possible!
+                </p>
+            </div>
+            <div class="card">
+                <img src="./images/mic.png" alt="">
+                <h3>microphone</h3>
+                <p class="card-p">$120.25</p>
+                <i class="fa-solid fa-star star" style="color: #FB8200";></i>
+                <i class="fa-solid fa-star star" style="color: #FB8200";></i>
+                <i class="fa-solid fa-star star" style="color: #FB8200";></i>
+                <i class="fa-solid fa-star star" style="color: #FB8200";></i>
+                <i class="fa-solid fa-star-half-stroke star" style="color: #FB8200"></i>
+                <i class="rate">4.99</i>
+                <p class="describe">
+                    Wordwide shifting <br>
+                    available <br>
+                    Buyers protection possible!
+                </p>
+            </div>
+            <div class="card">
+                <img src="./images/airpod.png" alt="">
+                <h3>Airbuds</h3>
+                <p class="card-p">$100.00</p>
+                <i class="fa-solid fa-star star" style="color: #FB8200";></i>
+                <i class="fa-solid fa-star star" style="color: #FB8200";></i>
+                <i class="fa-solid fa-star star" style="color: #FB8200";></i>
+                <i class="fa-solid fa-star star" style="color: #FB8200";></i>
+                <i class="fa-solid fa-star-half-stroke star" style="color: #FB8200"></i>
+                <i class="rate">4.99</i>
+                <p class="describe">
+                    Wordwide shifting <br>
+                    available <br>
+                    Buyers protection possible!
+                </p>
+            </div>
+            <div class="card">
+                <img src="./images/drone.png" alt="">
+                <h3>Drone</h3>
+                <p class="card-p">$980.25</p>
+                <i class="fa-solid fa-star star" style="color: #FB8200";></i>
+                <i class="fa-solid fa-star star" style="color: #FB8200";></i>
+                <i class="fa-solid fa-star star" style="color: #FB8200";></i>
+                <i class="fa-solid fa-star star" style="color: #FB8200";></i>
+                <i class="fa-solid fa-star-half-stroke star" style="color: #FB8200"></i>
+                <i class="rate">4.99</i>
+                <p class="describe">
+                    Wordwide shifting <br>
+                    available <br>
+                    Buyers protection possible!
+                </p>
+            </div>
+            <div class="card">
+                <img src="./images/lights.png" alt="">
+                <h3>Light Setup</h3>
+                <p class="card-p">$1200.00</p>
+                <i class="fa-solid fa-star star" style="color: #FB8200";></i>
+                <i class="fa-solid fa-star star" style="color: #FB8200";></i>
+                <i class="fa-solid fa-star star" style="color: #FB8200";></i>
+                <i class="fa-solid fa-star star" style="color: #FB8200";></i>
+                <i class="fa-solid fa-star-half-stroke star" style="color: #FB8200"></i>
+                <i class="rate">4.99</i>
+                <p class="describe">
+                    Wordwide shifting <br>
+                    available <br>
+                    Buyers protection possible!
+                </p>
+            </div>
+            <div class="card">
+                <img src="./images/setup.png" alt="">
+                <h3>Photoshoot set</h3>
+                <p class="card-p">$820.40</p>
+                <i class="fa-solid fa-star star" style="color: #FB8200";></i>
+                <i class="fa-solid fa-star star" style="color: #FB8200";></i>
+                <i class="fa-solid fa-star star" style="color: #FB8200";></i>
+                <i class="fa-solid fa-star star" style="color: #FB8200";></i>
+                <i class="fa-solid fa-star-half-stroke star" style="color: #FB8200"></i>
+                <i class="rate">4.99</i>
+                <p class="describe">
+                    Wordwide shifting <br>
+                    available <br>
+                    Buyers protection possible!
+                </p>
+            </div>
+            <div class="card">
+                <img src="./images/camera.png" alt="">
+                <h3>Vlogging Camera</h3>
+                <p class="card-p">$1800.80</p>
+                <i class="fa-solid fa-star star" style="color: #FB8200";></i>
+                <i class="fa-solid fa-star star" style="color: #FB8200";></i>
+                <i class="fa-solid fa-star star" style="color: #FB8200";></i>
+                <i class="fa-solid fa-star star" style="color: #FB8200";></i>
+                <i class="fa-solid fa-star-half-stroke star" style="color: #FB8200"></i>
+                <i class="rate">4.99</i>
+                <p class="describe">
+                    Wordwide shifting <br>
+                    available <br>
+                    Buyers protection possible!
+                </p>
+            </div>
+            <div class="card">
+                <img src="./images/single-light.png" alt="">
+                <h3>Green Screen</h3>
+                <p class="card-p">$25.48</p>
+                <i class="fa-solid fa-star star" style="color: #FB8200";></i>
+                <i class="fa-solid fa-star star" style="color: #FB8200";></i>
+                <i class="fa-solid fa-star star" style="color: #FB8200";></i>
+                <i class="fa-solid fa-star star" style="color: #FB8200";></i>
+                <i class="fa-solid fa-star-half-stroke star" style="color: #FB8200"></i>
+                <i class="rate">4.99</i>
+                <p class="describe">
+                    Wordwide shifting <br>
+                    available <br>
+                    Buyers protection possible!
+                </p>
+            </div>
+            <div class="card">
+                <img src="./images/action.png" alt="">
+                <h3>Action Camera</h3>
+                <p class="card-p">$380.00</p>
+                <i class="fa-solid fa-star star" style="color: #FB8200";></i>
+                <i class="fa-solid fa-star star" style="color: #FB8200";></i>
+                <i class="fa-solid fa-star star" style="color: #FB8200";></i>
+                <i class="fa-solid fa-star star" style="color: #FB8200";></i>
+                <i class="fa-solid fa-star-half-stroke star" style="color: #FB8200"></i>
+                <i class="rate">4.99</i>
+                <p class="describe">
+                    Wordwide shifting <br>
+                    available <br>
+                    Buyers protection possible!
+                </p>
+            </div>
+            <div class="invisible-respo"></div>
+            <div class="invisible-respo"></div>
+            <div>
+                <button class="see-more">See More 
+                    <i class="fa-solid fa-arrow-right" style="color: #E02C6DDE;"></i>
+                </button>
+            </div>
+         </div>
+       </section>
     </main>
 </body>
 </html>
