--- a/index.html
+++ b/index.html
@@ -216,6 +216,51 @@
             </div>
          </div>
        </section>
+       <section>
+           <div class="container3">
+              <div class="image">
+                <img src="./images/gear.png" alt="">
+              </div>
+              <div class="image-tittle">
+                 <h2>Featured products at one place</h2>
+                 <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor 
+                    do amet sint. Velit officia consequat duis enim velit mollit. 
+                    Exercitation veniam consequat sunt nostrud amet.</p>
+                    <button class="img-button">Join Now <i class="fa-solid fa-arrow-right" style="color: #ffffffde;"></i></button>
+              </div>
+           </div>
+       </section>
     </main>
+    <footer>
+        <section>
+            <div class="container4">
+              <div class="box4">
+                <h2>Influencer products</h2>
+                <p> 
+                    Copyright © 2020 influencer products <br>
+                    All rights reserved
+                </p>
+                <div class="footer-image">
+                   <div class="icons">
+                    <a href="">
+                      <img src="./icon/Instagram.png" alt=""></a>
+                   </div> 
+                   <div class="icons">
+                    <a href="">
+                    <img src="./icon/Dribbble.svg" alt=""></a>
+                   </div> 
+                   <div class="icons">
+                    <a href="">
+                     <img src="./icon/Twitter.png" alt=""></a>
+                    </div>
+                   <div class="icons">
+                    <a href="">
+                     <img src="./icon/Youtube.png" alt=""></a>
+                   </div>
+                </div>
+              </div>
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
